# DiscordBotTarot

./: pyproject.toml  requirements.txt  tarot_bot.py  tarot_cards.json
