[tool.poetry]
name = "discordbottarot"
version = "0.1.0"
description = ""
authors = ["rugnight <rugnight@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
discord-py = "^2.2.2"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
